--- a/Raspberry/templates/WebServer.html
+++ b/Raspberry/templates/WebServer.html
@@ -41,16 +41,17 @@
         .button-group {
             display: flex;
             justify-content: center;
-            gap: 10px;
+            gap: 0;
+            margin-top: 10px;
         }
         .button-group form {
-            display: inline-block;
+            margin: 0;/*display: inline-block;*/
         }
         .action-buttons {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 20px;
+            margin-top: 0;
         }
         .download-button {
             margin-top: 20px;
@@ -81,20 +82,22 @@
     </table>
 
     <h2 style="text-align: center;">Actions</h2>
-    <div class="button-group">
-        <form action="/previous" method="POST">
-            <button type="submit">Previous</button>
-        </form>
-        <form action="/next" method="POST">
-            <button type="submit">Next</button>
-        </form>
-    </div>
+    <box>
+        <div class="button-group">
+            <form action="/previous" method="POST">
+                <button type="submit">Previous</button>
+            </form>
+            <form action="/next" method="POST">
+                <button type="submit">Next</button>
+            </form>
+        </div>
 
-    <div class="action-buttons">
-        <form action="/setNewTimestamp" method="POST">
-            <button type="submit">Set Image As Finish Timestamp</button>
-        </form>
-    </div>
+        <div class="action-buttons">
+            <form action="/setNewTimestamp" method="POST">
+                <button type="submit">Set Image As Finish Timestamp</button>
+            </form>
+        </div>
+    </box>
 
     <h2 style="text-align: center;">Image Display</h2>
     <img src="{{ image_path }}" alt="Run Image">
