--- a/Raspberry/templates/WebServer.html
+++ b/Raspberry/templates/WebServer.html
@@ -8,8 +8,14 @@
     	.systemSettings {display: flex;}
         .systemSettings form{align: center;display: inline-block;}
     	.systemSettings button{width: 100%;}
+        .systemSettings img {
+            max-width: 100px; /* Set a maximum width */
+            max-height: 20px; /* Set a maximum height */
+            width: auto; /* Ensure the aspect ratio is maintained */
+            height: auto; /* Ensure the aspect ratio is maintained */
+        }
         
-    	.currentRun {border : 2px solid green;  display: flex;
+    	.currentRun {display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
@@ -40,8 +46,8 @@
             box-shadow: 0 0 2px red; /* Glow effect */
         }
         
-        .adjustRun{border : 2px solid black; padding : 5px}
-        .changeImageGroup {border: 2px solid yellow; display: flex;justify-content: space-between;padding: 0px;width: 100%;}
+        .adjustRun{padding : 5px}
+        .changeImageGroup {display: flex;justify-content: space-between;padding: 0px;width: 100%;}
         .changeImageGroup form {align: center; display: inline-block;flex-grow: 1;}
         .changeImageGroup button {
     		width: 100%; /* Ensure buttons fill their forms */
@@ -50,7 +56,7 @@
 			}
         .adjustTimestamp {display: flex;flex-direction: column;align-items: center;margin-top: 0;border: 2px solid blue}
         
-        .allRuns {border : 2px solid red}
+        .allRuns 
         table {width: 50%;margin: 20px auto;border-collapse: collapse;}
         th, td {border: 1px solid #ddd;padding: 8px;text-align: center;}
         th {background-color: #f4f4f4;}
