--- a/Raspberry/templates/WebServer.html
+++ b/Raspberry/templates/WebServer.html
@@ -54,7 +54,7 @@
     		padding: 5px; /* Optional: adjust padding for better spacing */
     		font-size: 1rem;
 			}
-        .adjustTimestamp {display: flex;flex-direction: column;align-items: center;margin-top: 0;border: 2px solid blue}
+        .adjustTimestamp {display: flex;flex-direction: column;align-items: center;margin-top: 0}
         
         .allRuns 
         table {width: 50%;margin: 20px auto;border-collapse: collapse;}
